--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>Monday, March 12th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Data Intro for Librarians</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://data-lessons.github.io/library-data-intro/">Data Intro for Librarians</a></td> </tr>
       <tr> <td>10:15</td>  <td>Break</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
