--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -4,6 +4,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td><a href="https://data-lessons.github.io/library-data-intro/">Data Intro for Librarians</a></td> </tr>
       <tr> <td>10:15</td>  <td>Break</td> </tr>
+      <tr> <td>10:30</td>  <td>Data Intro for Librarians (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
@@ -13,7 +14,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Shell Lessons for Libraries</td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>13:00</td>  <td>Git Intro for Librarians</td> </tr>
+      <tr> <td>10:45</td>  <td>Git Intro for Librarians</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
