--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -5,6 +5,7 @@
       <tr> <td>09:00</td>  <td><a href="https://data-lessons.github.io/library-data-intro/">Data Intro for Librarians</a></td> </tr>
       <tr> <td>10:15</td>  <td>Break</td> </tr>
       <tr> <td>10:30</td>  <td>Data Intro for Librarians (cont.)</td> </tr>
+      <tr> <td>11:30</td>  <td>Set-up & Installation for Day 2</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
