--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -11,6 +11,7 @@
       <li><a href="http://data-lessons.github.io/library-data-intro/reference">Reference...</a></li>
     </ul>
   </div>
+ <!--
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
@@ -22,7 +23,6 @@
       <li><a href="http://data-lessons.github.io/library-shell/reference">Reference...</a></li>
     </ul>
   </div>
-
 </div>
 
 <div class="row">
@@ -50,7 +50,7 @@
       </ul>
     </div>
   </div>
-</div>
+</div>-->
 <!--div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-sql">SQL Intro</h3>
