--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -64,6 +64,6 @@
       <li>Combining information from multiple tables using <code>join</code></li>
       <li><a href="http://data-lessons.github.io//library-sql/reference">Reference...</a></li>
     </ul>
-  </div>
+  </div>-->
 </div>
--->
+
