--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -13,9 +13,9 @@
   <div class="col-md-6">
     <h3>Friday, March 16th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Shell Lessons for Libraries</td> </tr>
+      <tr> <td>09:00</td>  <td>The Unix Shell</td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td>Git Intro for Librarians</td> </tr>
+      <tr> <td>10:45</td>  <td>The Unix Shell (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
@@ -23,8 +23,9 @@
     <div class="col-md-6">
     <h3>Monday, March 19th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>OpenRefine</td> </tr>
+      <tr> <td>09:00</td>  <td>Git Intro for Librarians</td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:45</td>  <td>OpenRefine</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
