--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -11,20 +11,20 @@
       <li><a href="http://data-lessons.github.io/library-data-intro/reference">Reference...</a></li>
     </ul>
   </div>
- <!--
   <div class="col-md-6">
-    <h3 id="syllabus-shell">The Unix Shell</h3>
+    <<h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
       <li>Files and directories</li>
       <li>History and tab completion</li>
-      <li>Counting and sorting contents in files</li>
       <li>Pipes and redirection</li>
-      <li>Mining or searching in files</li>
-      <li><a href="http://data-lessons.github.io/library-shell/reference">Reference...</a></li>
+      <li>Looping over files</li>
+      <li>Creating and running shell scripts</li>
+      <li>Finding things</li>
+      <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
     </ul>
   </div>
 </div>
-
+<!--
 <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
