--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -13,7 +13,7 @@
   <div class="col-md-6">
     <h3>Friday, March 16th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>The Unix Shell</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">The Unix Shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td>The Unix Shell (cont.)</td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
