--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <<h3 id="syllabus-shell">The Unix Shell</h3>
+    <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
       <li>Files and directories</li>
       <li>History and tab completion</li>
@@ -50,8 +50,8 @@
       </ul>
     </div>
   </div>
-</div>-->
-<!--div class="row">
+</div>
+div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-sql">SQL Intro</h3>
     <ul>
@@ -64,6 +64,4 @@
       <li>Combining information from multiple tables using <code>join</code></li>
       <li><a href="http://data-lessons.github.io//library-sql/reference">Reference...</a></li>
     </ul>
-  </div>-->
-</div>
-
+  </div> -->
