--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -25,9 +25,9 @@
     <div class="col-md-6">
     <h3>Monday, March 19th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Git Intro for Librarians</td> </tr>
+      <tr> <td>09:00</td>  <td><href="https://data-lessons.github.io/library-git/">Git Intro for Librarians</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td>OpenRefine</td> </tr>
+      <tr> <td>10:45</td>  <td><a href="http://data-lessons.github.io/library-openrefine/">OpenRefine</a></td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
     </table>
