--- a/_includes/lc/syllabus.html
+++ b/_includes/lc/syllabus.html
@@ -24,7 +24,6 @@
     </ul>
   </div>
 </div>
-<!--
 <div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
@@ -51,7 +50,7 @@
     </div>
   </div>
 </div>
-div class="row">
+<!--<div class="row">
   <div class="col-md-6">
     <h3 id="syllabus-sql">SQL Intro</h3>
     <ul>
