--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -25,7 +25,7 @@
     <div class="col-md-6">
     <h3>Monday, March 19th</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td><href="https://data-lessons.github.io/library-git/">Git Intro for Librarians</a></td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://data-lessons.github.io/library-git/">Git Intro for Librarians</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td><a href="http://data-lessons.github.io/library-openrefine/">OpenRefine</a></td> </tr>
       <tr> <td>12:00</td>  <td>BYO-Lunch (Optional)</td> </tr>
